@@ -81,3 +81,4 @@
 ( cvs diff -u -r 1.1.2.61 -r 1.1.2.62 src/gtkhtml2_viewer.c;  ) > 0.16.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.108 -r 1.1.2.109 configure.ac;  cvs diff -u -r 1.1.2.62 -r 1.1.2.63 src/gtkhtml2_viewer.c;  ) > 0.16.0cvs3.patchset
 ( cvs diff -u -r 1.1.2.63 -r 1.1.2.64 src/gtkhtml2_viewer.c;  ) > 0.16.0cvs4.patchset
+( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/gtkhtml2_prefs.c;  cvs diff -u -r 1.1.2.64 -r 1.1.2.65 src/gtkhtml2_viewer.c;  ) > 0.16.0cvs5.patchset
